--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,10 @@
 body {
     font-family: Arial, Helvetica, sans-serif;
+    margin: 0;
+    padding: 0;
+}
+
+header {
+    background: cornflowerblue;
+    margin: 0;
 }
