--- a/css/style.css
+++ b/css/style.css
@@ -1,15 +1,50 @@
 body {
-    font-family: Arial, Helvetica, sans-serif;
+    background: linear-gradient(to right, #FFB6C1, #e7bf09);
+    font-family: Arial, Helvetica, sans-serif;    
     margin: 0;
     padding: 0;
 }
 
 header {
-    background: linear-gradient(to right, #FFB6C1, #e7bf09);
     text-align: center;
 }
 
-h1 {
+h1,h2,p {
     color: #fff;
 }
+
+section.home {
+    height: 500px;
+    width: 100%;
+    display: flex;
+    
+}
+
+section.first {
+    padding: 100px;
+    width: 50%;
+    
+}
+
+section.imageSection {
+    
+    width: 50%;
+}
+
+img {
+    margin: 50px auto;
+    border-radius: 5%;
+
+}
+
+section.home section.first h2.banner {
+    font-size: 2rem;
+
+}
+
+section.home section.first p {
+    font-size: 1rem;
+}
+
+
 
