Add media query for mobile style

--- a/css/style.css
+++ b/css/style.css
@@ -47,4 +47,9 @@ section.home section.first p {
 }
 
 
-
+@media screen and (max-width: 480px) {
+    
+    section {
+        width: 100%;
+    }
+}
